--- a/portramatic-worker/package.json
+++ b/portramatic-worker/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
   "author": "Timothy Baldridge (halgari)",
-  "license": "MIT",
+  "license": "GPL3",
   "devDependencies": {
     "prettier": "^1.18.2",
     "@aws-sdk/client-rekognition": "^3.35.0",
