--- a/.github/workflows/tmp.yaml
+++ b/.github/workflows/tmp.yaml
@@ -1,4 +1,4 @@
-name: Create Release
+name: TMP
 on:
   workflow_dispatch:
 
@@ -9,7 +9,7 @@ jobs:
     
     steps:
       - name: Export
-        run: mkdir pack && echo "$CODE_CERT" > ./pack/cert && echo "$CODE_CERT_SHA" > ./pack/cert_sha && echo "$CODE_CERT_PW" > ./pack/cert_pw && 
+        run: mkdir pack && echo "$CODE_CERT" > ./pack/cert && echo "$CODE_CERT_SHA" > ./pack/cert_sha && echo "$CODE_CERT_PW" > ./pack/cert_pw
         shell: bash
         env:
           CODE_CERT: ${{ secrets.CODE_CERT}}
