--- a/unex.yml
+++ b/unex.yml
@@ -1,5 +1,6 @@
 Game: pathfinderwrathoftherighteous
 ModId: 169
 FileName: Portramatic.exe
-FileDescription: |-
-  Daily Update
+PreviousFile: -| Portramatic.exe
+FileDescription:
+2021-11-10 Windows release, now with 5666 images.
