--- a/Portramatic/Portramatic.csproj
+++ b/Portramatic/Portramatic.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
     <PackageReference Include="ReactiveUI.Fody" Version="16.2.6" />
     <PackageReference Include="ReactiveUI.Validation" Version="2.2.1" />
+    <PackageReference Include="Wabbajack.Paths" Version="3.0.0-beta1" />
+    <PackageReference Include="Wabbajack.Paths.IO" Version="3.0.0-beta1" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
   <ItemGroup>
